Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-818

The Catalog Server exits with an OOM error after a certain number of CREATE statements

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 1.2.4
    • Impala 1.2.4
    • None
    • None

    Description

      Lenni's in the midst of investigating.

      Reproduction:

      • Lots of DDL (create table), preferably in parallel, to speed things up.
      • I was attempting to load ~100k tables.
        Observation:
      • tcmalloc.total-bytes-reserved monotonically increases till the Catalog Server exits with an OOM error.

      As a side note, I've been able to hit this locally as well.

      Attachments

        Activity

          People

            lskuff Lenni Kuff
            ishaan Ishaan Joshi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: